RESOLVED FIXED202735
MediaTime pretty printer can print if time is invalid
https://bugs.webkit.org/show_bug.cgi?id=202735
Summary MediaTime pretty printer can print if time is invalid
Xabier Rodríguez Calvar
Reported 2019-10-09 02:15:23 PDT
MediaTime pretty printer can print if time is invalid
Attachments
Patch (1.21 KB, patch)
2019-10-09 02:16 PDT, Xabier Rodríguez Calvar
no flags
Patch (1.64 KB, patch)
2019-10-10 05:06 PDT, Xabier Rodríguez Calvar
no flags
Patch for landing (1.64 KB, patch)
2019-10-10 05:07 PDT, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2019-10-09 02:16:50 PDT
Eric Carlson
Comment 2 2019-10-09 08:41:53 PDT
Comment on attachment 380522 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=380522&action=review > Source/WTF/wtf/MediaTime.cpp:598 > + if (isInvalid()) > + builder.appendLiteral(", invalid"); It would be nice to fix MediaTime::toJSONObject as well. Something like: if (isInvalid()) object->setBoolean("invalid"_s, true);
Xabier Rodríguez Calvar
Comment 3 2019-10-10 05:06:07 PDT
Xabier Rodríguez Calvar
Comment 4 2019-10-10 05:07:23 PDT
Created attachment 380635 [details] Patch for landing
Xabier Rodríguez Calvar
Comment 5 2019-10-10 06:58:21 PDT
Comment on attachment 380635 [details] Patch for landing I'll land this tomorrow in the morning.
WebKit Commit Bot
Comment 6 2019-10-11 01:21:09 PDT
Comment on attachment 380635 [details] Patch for landing Clearing flags on attachment: 380635 Committed r251003: <https://trac.webkit.org/changeset/251003>
WebKit Commit Bot
Comment 7 2019-10-11 01:21:11 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-10-11 01:22:19 PDT
Note You need to log in before you can comment on or make changes to this bug.