MediaTime pretty printer can print if time is invalid https://bugs.webkit.org/show_bug.cgi?id=202735

Reviewed by Eric Carlson.

* wtf/MediaTime.cpp:
(WTF::MediaTime::toString const): Append ", invalid" if isInvalid().
(WTF::MediaTime::toJSONObject const): Set boolean invalid to true
when invalid.


Canonical link: https://commits.webkit.org/216293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251003 268f45cc-cd09-0410-ab3c-d52691b4dbfc